--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: crud_usuario
+name: lista_usuario
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -34,10 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  sqflite: 
-  path:
+  sqflite: ^2.0.2
+  path: ^1.8.0
+  sqflite_common_ffi: ^2.1.0+2
   email_validator:
-  sqflite_common_ffi:
 
 dev_dependencies:
   flutter_test:
